--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     {
                         initPayload: "/greet",
                         customData: { language: "en" },
-                        socketUrl: "http://localhost:5005",
+                        socketUrl: "https://borishksh.github.io/mental_health_chatbot_rasa:5005",
                         title: "Behaviour Activation Bot",
                         showMessageDate: true,
                         showFullScreenButton: true,
